# nhsdigital.api-management-utils

./: .gitignore  Makefile  README.md  apigee_client.py  apigee_client_test.py  build-prereqs.yml  canary-api.yml  env_cleaner.py  env_cleaner_test.py  pyproject.toml  spec_uploader.py  test.sh
.github/: pull_request_template.md
ansible/: Makefile  add-apim-guids-policy.yml  add-jwks-resource-url-to-app.yml  ansible.cfg  bootstrap-project.yml  build-ecs-proxies.yml  cleanup-proxy-for-env.yml  create-api-deployment-dns-entry.yml  create-api-deployment-pre-reqs.yml  create-api-deployment-user-access-key.yml  create-apigee-app-attribute.yml  create-build-env-vars.yml  create-ecr-build-role.yml  create-ecr-build-user.yml  deploy-api-pipelines.yml  deploy-apigee-app.yml  deploy-apigee-product-and-spec.yml  deploy-apigee-product.yml  deploy-apigee-proxy.yml  deploy-apigee-spec.yml  deploy-ecs-proxies.yml  deploy-manifest.yml  deploy-proxy-ecs.yml  destroy-api-deployment-dns-entry.yml  destroy-ecs-proxies.yml  get-developer-emails.yml  remove-api-deployment-user-access-key.yml  remove-ecr-build-role.yml  remove-ecr-build-user.yml  remove-ecs-proxy-deployment.yml  remove-ecs-proxy-pre-reqs.yml  remove-old-auto-apps.yml  remove-old-ecs-pr-deploys.yml  remove-old-pr-portal-apis.yml  remove-old-pr-products.yml  remove-old-pr-proxies.yml  remove-old-pr-specs.yml  template-manifest.yml  template-proxies.yml  validate-manifest.yml
az/: become-build-user.yml  become-deployment-user.yml  build-and-push-ecs-proxies.yml  build-prereqs.yml  cleanup-ecs-pr-proxies.yml  (+2 more)
docker/: Dockerfile
(+252 files in other folders)
