[tool.poetry]
name = "api-management-utils"
version = "0.1.0"
description = ""
authors = ["Laurence Smith <laurence.smith@airelogic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
jinja2 = "^2.11.1"
requests = "^2.23.0"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
