[tool.poetry]
name = "api-management-utils"
version = "0.1.0"
description = ""
authors = ["Laurence Smith <laurence.smith@airelogic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
jinja2 = "^2.11.1"
requests = "^2.23.0"
flake8 = "^3.7.9"
mypy = "^0.770"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
ansible = "^2.9.9"
pyyaml = "^5.3.1"
jmespath = "^0.10.0"
docker-py = "^1.10.6"
awscli = "^1.18.80"
pydantic = "^1.7.3"
deepdiff = "^5.0.2"

[tool.poetry.dev-dependencies]
ansible-lint = "^4.2.0"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
